--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     right: 0;
     left: 0;
     height: 60px;
-    background-color: #fb6100;
+    background-color: #f36805;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -113,6 +113,21 @@ body {
     width: 22%;
     box-shadow: 0 1px 1px 1px #d7d7d7;
     text-align: center;
+}
+
+.selectedAmount {
+    padding-right: .5rem;
+    font-weight: bold;
+}
+
+.foodAndPriceContainer {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.foodName {
+    font-weight: bold;
 }
 
 #basketContent {
@@ -509,11 +524,6 @@ body {
     transition: all 5s ease-in-out;
 }
 
-.costsDiv {
-    display: flex;
-    flex-direction: column;
-}
-
 .subTotal,
 .deliveryCosts,
 .sumTotal {
@@ -526,7 +536,7 @@ body {
 }
 
 #submitBtnNotEnough {
-    background-color: #125fcab4;
+    background-color: #f36805;
     color: white;
     padding: 10px;
     border-radius: 5px;
@@ -537,14 +547,16 @@ body {
 }
 
 #submitBtn {
-    background-color: #125fca;
+    background-color: #f36805;
     color: white;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 2rem;
+    width: 90%;
     border: none;
     font-size: 16px;
     margin-top: 20px;
     margin-bottom: 50px;
+    font-weight: bold;
 }
 
 #submitBtn:hover {
@@ -591,13 +603,12 @@ body {
 }
 
 .openingHoursContainer {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     margin-top: 20px;
-    display: flex;
-    width: 60%;
-    background-color: rgba(245, 158, 96, 0.072);
+    background-color: #fb60001c;
     padding: 10px;
+    border-radius: 10px;
 }
 
 .openingHoursContainer span {
